--- a/ai1-lab/strona_css2.html
+++ b/ai1-lab/strona_css2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- Css2 -->
 <head>
     <title>FAST FOOD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
