--- a/ai4-lab/index.html
+++ b/ai4-lab/index.html
@@ -17,7 +17,7 @@
 <div id="weather-results-container"></div>
 
 
-<script src="after.js" type="text/javascript"></script>
+<script src="skrypt.js" type="text/javascript"></script>
 
 </body>
 </html>
